# dec

dec/app/: build.gradle
dec/app/src/main/: AndroidManifest.xml
dec/app/src/main/cpp/: CMakeLists.txt  ProcessFrame.cpp
dec/app/src/main/java/de/mur1/dec/: CameraActivity.java  CameraPreview.java  MainActivity.java  ProcessFrame.java  Util.java
dec/app/src/main/res/layout/: activity_camera.xml  activity_main.xml
dec/app/src/main/res/raw/: graph.pb_put_frozen_inference_graph_here  pbtxt.pbtxt
dec/app/src/main/res/values/: strings.xml
